# hub75-bcm

./: Cargo.toml  LICENSE-MIT
esp32s3-alarm-clock/: Cargo.toml
esp32s3-alarm-clock/src/matrix/: buffer.rs
esp32s3-alarm-clock/src/rgb_matrix/: buffer.rs  rgb_matrix.rs
hub75-matrix/: Cargo.toml
hub75-matrix/src/: buffer.rs  config.rs  lib.rs  rgb_matrix.rs
hub75-matrix/src/dma/: esp32s3.rs  mod.rs
src/: buffer.rs  clock_divider.rs  main.rs  matrix_word.rs  rgb_matrix.rs
src/matrix/: mod.rs
src/rgb_matrix/: color.rs  dma.rs  mod.rs
