[workspace]
resolver = "2"
members = [
    "esp32s3-alarm-clock",
]

[profile.release]
debug = true

# Patch the Git version of the hal packages as there's LCD_CAM support added but
# not released yet (v0.16.0 should have it I think).
[patch.crates-io]
esp32s3-hal = { git = "https://github.com/paxswill/esp-hal.git", branch="dma-customization" }
esp-hal = { git = "https://github.com/paxswill/esp-hal.git", branch="dma-customization" }