[package]
name = "hub75-bcm"
version = "0.1.0"
edition = "2021"
authors = ["Will Ross <paxswill@paxswill.com>"]
description = "HUB75 RGB matrix driver using binary code modulation"
repository = "https://git.sr.ht/~paxswill/hub75-bcm"
license = "MIT OR Apache-2.0"
keywords = ["hub75", "embedded-graphics", "embedded", "rgb-matrix"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4.0"
fugit = "0.3.7"
esp32s3-hal = { version = "0.15.0", optional = true }
log = { version = "0.4.20" }

# Patch the Git version of the hal packages as there's LCD_CAM support added but
# not released yet (v0.16.0 should have it I think).
[patch.crates-io]
esp32s3-hal = { git = "https://github.com/paxswill/esp-hal.git", branch="dma-customization" }
esp-hal = { git = "https://github.com/paxswill/esp-hal.git", branch="dma-customization" }

[features]
default = []
esp32s3 = ["esp32s3-hal"]